Wrote contracts and their tests minus certificate authentication

--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,9 @@
 /* CSS declarations go here */
+/* doesnt work for some reason
+body {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  height: 400px;
+}
+*/
